bulk loading RC1
